<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
  <modelVersion>4.0.0</modelVersion>

  <parent>
    <groupId>org.sonarsource.parent</groupId>
    <artifactId>parent</artifactId>
    <version>52</version>
  </parent>

  <groupId>org.sonarsource.javascript</groupId>
  <artifactId>javascript</artifactId>
  <version>5.2-SNAPSHOT</version>
  <packaging>pom</packaging>

  <name>SonarJS</name>
  <description>SonarQube JavaScript Analyzer</description>
  <inceptionYear>2011</inceptionYear>
  <organization>
    <name>SonarSource and Eriks Nukis</name>
  </organization>
  <licenses>
    <license>
      <name>GNU LGPL 3</name>
      <url>http://www.gnu.org/licenses/lgpl.txt</url>
      <distribution>repo</distribution>
    </license>
  </licenses>

  <developers>
    <developer>
      <id>inverno</id>
      <name>Carlo Bottiglieri</name>
      <organization>SonarSource</organization>
    </developer>
    <developer>
      <id>vilchik-elena</id>
      <name>Elena Vilchik</name>
      <organization>SonarSource</organization>
    </developer>
  </developers>

  <modules>
    <module>javascript-frontend</module>
    <module>javascript-checks</module>
    <module>sonar-javascript-plugin</module>
    <module>javascript-checks-testkit</module>
    <module>eslint-bridge</module>
    <module>nodejs-utils</module>
  </modules>

  <scm>
    <connection>scm:git:git@github.com:SonarSource/sonar-javascript.git</connection>
    <developerConnection>scm:git:git@github.com:SonarSource/sonar-javascript.git</developerConnection>
    <url>https://github.com/SonarSource/sonar-javascript</url>
    <tag>HEAD</tag>
  </scm>
  <issueManagement>
    <system>JIRA</system>
    <url>https://github.com/SonarSource/sonar-javascript/issues</url>
  </issueManagement>
  <ciManagement>
    <system>Travis</system>
    <url>https://travis-ci.org/SonarSource/sonar-javascript</url>
  </ciManagement>

  <properties>
    <gitRepositoryName>SonarJS</gitRepositoryName>
    <license.title>SonarQube JavaScript Plugin</license.title>
    <sonarQubeMinVersion>6.7</sonarQubeMinVersion>

    <assertj.version>3.5.2</assertj.version>
    <commons-io.version>2.5</commons-io.version>
    <commons-lang.version>2.6</commons-lang.version>
    <guava.version>19.0</guava.version>
    <junit.version>4.12</junit.version>
    <logback.version>1.0.13</logback.version>
    <mockito.version>2.21.0</mockito.version>
    <slf4j.version>1.7.21</slf4j.version>
    <sonar.version>7.4</sonar.version>
    <sonar-orchestrator.version>3.24.0.1993</sonar-orchestrator.version>
    <sonarlint.version>4.1.0.2218</sonarlint.version>
    <sslr.version>1.23</sslr.version>
    <sslr-squid-bridge.version>2.7.0.377</sslr-squid-bridge.version>
    <gson.version>2.6.2</gson.version>
    <analyzer-commons.version>1.10.2.456</analyzer-commons.version>
    <node.version>v10.11.0</node.version>
    <yarn.version>v1.10.1</yarn.version>
    <npm.version>6.4.1</npm.version>

    <artifactsToPublish>${project.groupId}:sonar-javascript-plugin:jar</artifactsToPublish>
    <maven.test.redirectTestOutputToFile>true</maven.test.redirectTestOutputToFile>

    <!-- FIXME fix javadoc errors -->
    <doclint>none</doclint>
  </properties>

  <dependencyManagement>
    <dependencies>

      <!-- Default dependencies (compile) -->
      <dependency>
        <groupId>${project.groupId}</groupId>
        <artifactId>javascript-frontend</artifactId>
        <version>${project.version}</version>
      </dependency>
      <dependency>
        <groupId>${project.groupId}</groupId>
        <artifactId>javascript-checks</artifactId>
        <version>${project.version}</version>
      </dependency>
      <dependency>
        <groupId>${project.groupId}</groupId>
        <artifactId>nodejs-utils</artifactId>
        <version>${project.version}</version>
      </dependency>
      <dependency>
        <groupId>org.sonarsource.sslr</groupId>
        <artifactId>sslr-core</artifactId>
        <version>${sslr.version}</version>
      </dependency>
      <dependency>
        <groupId>org.sonarsource.analyzer-commons</groupId>
        <artifactId>sonar-analyzer-commons</artifactId>
        <version>${analyzer-commons.version}</version>
      </dependency>
      <dependency>
        <groupId>org.sonarsource.sslr-squid-bridge</groupId>
        <artifactId>sslr-squid-bridge</artifactId>
        <version>${sslr-squid-bridge.version}</version>
        <exclusions>
          <exclusion>
            <groupId>org.codehaus.sonar.sslr</groupId>
            <artifactId>sslr-core</artifactId>
          </exclusion>
          <exclusion>
            <groupId>org.codehaus.sonar.sslr</groupId>
            <artifactId>sslr-xpath</artifactId>
          </exclusion>
          <exclusion>
            <groupId>org.codehaus.sonar</groupId>
            <artifactId>sonar-plugin-api</artifactId>
          </exclusion>
          <exclusion>
            <groupId>org.picocontainer</groupId>
            <artifactId>picocontainer</artifactId>
          </exclusion>
          <exclusion>
            <groupId>org.slf4j</groupId>
            <artifactId>slf4j-api</artifactId>
          </exclusion>
          <exclusion>
            <groupId>org.slf4j</groupId>
            <artifactId>jcl-over-slf4j</artifactId>
          </exclusion>
        </exclusions>
      </dependency>
      <dependency>
        <groupId>commons-lang</groupId>
        <artifactId>commons-lang</artifactId>
        <version>${commons-lang.version}</version>
      </dependency>
      <dependency>
        <groupId>commons-io</groupId>
        <artifactId>commons-io</artifactId>
        <version>${commons-io.version}</version>
      </dependency>
      <dependency>
        <groupId>ch.qos.logback</groupId>
        <artifactId>logback-classic</artifactId>
        <version>${logback.version}</version>
      </dependency>
      <dependency>
        <groupId>com.google.guava</groupId>
        <artifactId>guava</artifactId>
        <version>${guava.version}</version>
      </dependency>
      <dependency>
        <groupId>com.google.code.gson</groupId>
        <artifactId>gson</artifactId>
        <version>${gson.version}</version>
      </dependency>
      <dependency>
        <groupId>com.google.code.findbugs</groupId>
        <artifactId>jsr305</artifactId>
        <version>1.3.9</version>
      </dependency>
      <dependency>
        <groupId>com.squareup.okhttp3</groupId>
        <artifactId>okhttp</artifactId>
        <version>3.13.1</version>
      </dependency>
      <dependency>
        <groupId>org.apache.commons</groupId>
        <artifactId>commons-compress</artifactId>
        <version>1.18</version>
      </dependency>
      <dependency>
        <groupId>org.tukaani</groupId>
        <artifactId>xz</artifactId>
        <version>1.8</version>
      </dependency>


      <!-- Test dependencies -->
      <dependency>
        <groupId>${project.groupId}</groupId>
        <artifactId>javascript-checks-testkit</artifactId>
        <version>${project.version}</version>
      </dependency>
      <dependency>
        <groupId>junit</groupId>
        <artifactId>junit</artifactId>
        <version>${junit.version}</version>
        <scope>test</scope>
      </dependency>
      <dependency>
        <groupId>org.mockito</groupId>
        <artifactId>mockito-core</artifactId>
        <version>${mockito.version}</version>
        <scope>test</scope>
      </dependency>
      <dependency>
        <groupId>org.assertj</groupId>
        <artifactId>assertj-core</artifactId>
        <version>${assertj.version}</version>
        <scope>test</scope>
      </dependency>
      <dependency>
        <groupId>org.sonarsource.sonarqube</groupId>
        <artifactId>sonar-testing-harness</artifactId>
        <version>${sonar.version}</version>
        <scope>test</scope>
      </dependency>
      <dependency>
        <groupId>org.sonarsource.sslr</groupId>
        <artifactId>sslr-testing-harness</artifactId>
        <version>${sslr.version}</version>
        <scope>test</scope>
      </dependency>
      <dependency>
        <groupId>org.sonarsource.sonarlint.core</groupId>
        <artifactId>sonarlint-core</artifactId>
        <version>${sonarlint.version}</version>
        <scope>test</scope>
      </dependency>
      <dependency>
        <groupId>org.sonarsource.orchestrator</groupId>
        <artifactId>sonar-orchestrator</artifactId>
        <version>${sonar-orchestrator.version}</version>
        <scope>test</scope>
      </dependency>
      <dependency>
        <groupId>org.awaitility</groupId>
        <artifactId>awaitility</artifactId>
        <version>3.1.2</version>
        <scope>test</scope>
      </dependency>

      <!-- Provided dependencies -->
      <dependency>
        <groupId>org.sonarsource.sonarqube</groupId>
        <artifactId>sonar-plugin-api</artifactId>
        <version>${sonar.version}</version>
        <scope>provided</scope>
      </dependency>
      <dependency>
        <groupId>org.sonarsource.javascript</groupId>
        <artifactId>sonar-javascript-plugin</artifactId>
        <type>sonar-plugin</type>
        <version>${project.version}</version>
        <scope>provided</scope>
      </dependency>
      <dependency>
        <groupId>org.slf4j</groupId>
        <artifactId>slf4j-api</artifactId>
        <version>${slf4j.version}</version>
        <scope>provided</scope>
      </dependency>

    </dependencies>
  </dependencyManagement>

  <build>

    <pluginManagement>
      <plugins>
        <plugin>
          <groupId>com.github.eirslett</groupId>
          <artifactId>frontend-maven-plugin</artifactId>
          <version>1.6</version>
        </plugin>
        <plugin>
          <groupId>org.codehaus.mojo</groupId>
          <artifactId>exec-maven-plugin</artifactId>
          <version>1.6.0</version>
        </plugin>
      </plugins>
    </pluginManagement>
  </build>

  <profiles>
    <profile>
      <id>its</id>
      <modules>
        <module>its</module>
      </modules>
    </profile>
    <profile>
      <!-- Use javac's release flag for Java 9 and higher -->
      <id>java9+</id>
      <activation>
        <jdk>[9,)</jdk>
      </activation>
      <properties>
        <maven.compiler.release>8</maven.compiler.release>
      </properties>
    </profile>
  </profiles>

</project>
